  [Graeme Weatherill]
  * Fixes to bchydro_2016_epistemic, eshm20_craton and lanzano_2019

  [Marco Pagani]
  * Fixed bug in get_profiles_from_simple_fault_data affecting KiteSurfaces

  [Michele Simionato]
  * Fixed shakemap calculations to take the risk IMTs and not the hazard IMTs
  * Removed sorting of the sections in the multiFaultSource reader to keep
    the rup_idxs consistent with the order in the files
  * GMFs too small to produce losses now give a warning rather than an error
  * Fixed bug in `get_ry0_distance` breaking conditioned GMFs
  * Fixed the rupture exporter in presence of GMPETables
  * Fixed severe bug affecting the classical tiling calculator

python3-oq-engine (3.16.3-1~xenial01) xenial; urgency=low

  [Kendra Johnson]
  * Fixed a bug in hazardlib.geo.surface.multi affecting the disaggregation

  [Michele Simionato]
  * Fixed the damage state header in the aggrisk outputs
  * Fixed the realizations extractor for scenario calculations starting from
    ruptures with multiple different tectonic region types
  * Fixed a subtle mutability bug affecting various GMPEs
  * Fixed rupture sampling in the case of a same source appearing in multiple
    logic tree branches
  * Fixed a bug in classical_damage causing a ValueError: could not broadcast
    input array from shape (X,Y) into shape (X,) in some situations
  * Fixed the CSV importer so that it can import exported GMFs even in
    the presence of a `custom_site_id`

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Tue, 16 May 2023 08:07:48 +0000

python3-oq-engine (3.16.2-1~xenial01) xenial; urgency=low

  [Michele Simionato, Paolo Tormene]
  * Fixed a bug in extract_agg_curves affecting the QGIS plugin
  * Fixed a bug in rare scenario calculations causing an IndexError in the
    line rctx.clon = c.lons[rctx.sids]

  [Marco Pagani, Michele Simionato]
  * Fixed a bug in the source writer when writing NonParametricSources