@@ -1,3 +1,7 @@
+  [Claudio Schill]
+  * Fixed sorting bug in the sigma_mu adjustment factor in
+    the Kuehn et al. (2020) GMM
+
   [Graeme Weatherill]
   * Fixes to bchydro_2016_epistemic, eshm20_craton and lanzano_2019
 
